--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New-year-offer</title>
+    <!-- Styles css -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
+        rel="stylesheet" />
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-subtitle">Happy New Year</h3>
+                <h1 class="banner-title">New Year Party<br />Celebration</h1>
+            </div>
+            <img class="banner-image" src="images/Banner Image.png" alt="New Year Celebration Banner" />
+        </div>
+    </header>
 </body>
+
 </html>
