--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Header Part -->
     <header class="header">
         <div class="banner">
             <div class="banner-content">
@@ -25,6 +26,15 @@
             <img class="banner-image" src="images/Banner Image.png" alt="New Year Celebration Banner" />
         </div>
     </header>
+    <!-- Main Part -->
+    <main class="main-content">
+        <section class="discount-section">
+            <h1 class="discount-amount">65% OFF</h1>
+            <p class="discount-subtitle">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2 class="discount-categories">ALL CATEGORIES</h2>
+            <img src="images/New Year Photo.png" alt="Happy New Year" class="discount-image" />
+        </section>
+    </main>
 </body>
 
 </html>
