--- a/index.html
+++ b/index.html
@@ -28,11 +28,27 @@
     </header>
     <!-- Main Part -->
     <main class="main-content">
+        <!-- Discount section -->
         <section class="discount-section">
             <h1 class="discount-amount">65% OFF</h1>
             <p class="discount-subtitle">OUR HOLIDAY DEALS ARE BETTER</p>
             <h2 class="discount-categories">ALL CATEGORIES</h2>
             <img src="images/New Year Photo.png" alt="Happy New Year" class="discount-image" />
+        </section>
+        <!-- party section -->
+        <section class="party-section">
+            <div class="party-content">
+                <h1>Welcome to<br /><span>midnight party</span></h1>
+                <p class="party-description">
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+                    euismod.
+                </p>
+                <a href="#" class="join-button">JOIN NOW</a>
+            </div>
+            <div class="party-year-image">
+                <img src="images/Group 70.png" alt="2024 Celebration" />
+            </div>
         </section>
     </main>
 </body>
