--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
                 <img src="images/Group 70.png" alt="2024 Celebration" />
             </div>
         </section>
+        <!-- Time section -->
+        <section class="time">
+            <div class="time-section">
+                <h1><span class="text">Place: </span>New Park Hotel</h1>
+                <h1><span class="text">Date: </span>31 December Night 2023</h1>
+                <h1><span class="text">Time: </span>Evening 7.30 pm to 12.30 am</h1>
+            </div>
+            <div class="btn-join">
+                <button>JOIN NOW</button>
+            </div>
+        </section>
     </main>
 </body>
 
