Best offer section complate

--- a/index.html
+++ b/index.html
@@ -61,6 +61,30 @@
                 <button>JOIN NOW</button>
             </div>
         </section>
+        <!-- Best offer -->
+        <section class="best-offer">
+            <div class="offer-part">
+                <h1>NEW BEST OFFER</h1>
+                <p class="coming-soon">Coming Soon</p>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+                    euismod.
+                </p>
+            </div>
+            <div class="offer-image-center">
+                <div class="offer-image-round">
+                    <img src="images/Ellipse 1.png" alt="Offer image" />
+                </div>
+            </div>
+            <div class="year-part">
+                <div class="year">2024</div>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+                </p>
+                <img src="images/Group 96.png" alt="group-96" />
+            </div>
+        </section>
     </main>
 </body>
 
