Sales section complate

--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
                 <img src="images/Group 96.png" alt="group-96" />
             </div>
         </section>
+        <!-- sales -->
+        <section class="sales">
+            <div class="sales-discount">
+                <h1>WHAT IS FUNCTIONAL</h1>
+                <h2>Holidays Sale 50%</h2>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+                    euismod.
+                </p>
+                <img src="images/Group 75.png" alt="Gift Box" class="gift-box" />
+                <div class="sales-banner">Biggest New Year Sale!</div>
+                <img src="images/Group 44.png" alt="50% discount" />
+            </div>
+        </section>
     </main>
 </body>
 
