--- a/index.html
+++ b/index.html
@@ -100,6 +100,54 @@
                 <img src="images/Group 44.png" alt="50% discount" />
             </div>
         </section>
+        <!-- Product section-->
+        <section style="
+          padding: 60px 20px;
+          text-align: center;
+          font-family: 'Inter', sans-serif;
+        ">
+            <p style="color: red; font-weight: 700; margin: 0">THE BEST GIFTS</p>
+            <h2 style="font-size: 2.5em; margin: 10px 0">Our Awesome Portfolio</h2>
+            <p style="color: #666; max-width: 600px; margin: 0 auto 40px">
+                Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+                euismod.
+            </p>
+
+            <div style="
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            max-width: 1320px;
+            margin: 0 auto;
+          ">
+                <img src="images/Rectangle 3.png" alt="Yellow Bag" style="width: 100%; border-radius: 16px" />
+                <img src="images/Rectangle 4.png" alt="Vintage Bag" style="width: 100%; border-radius: 16px" />
+                <img src="images/Rectangle 5.png" alt="Red Heels" style="width: 100%; border-radius: 16px" />
+                <img src="images/Rectangle 6.png" alt="White Heels" style="width: 100%; border-radius: 16px" />
+                <img src="images/Rectangle 7.png" alt="Sunglasses" style="width: 100%; border-radius: 16px" />
+                <img src="images/Rectangle 8.png" alt="Rings" style="width: 100%; border-radius: 16px" />
+            </div>
+        </section>
+        <!-- News Latter section-->
+        <section class="news-latter">
+            <div class="newsletter-box">
+                <div class="icon">
+                    <img src="images/Group 61.png" alt="Email Icon" />
+                </div>
+                <h1>Subscribe Newsletter</h1>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+                    euismod.
+                </p>
+                <input type="email" placeholder="user@gmail.com" />
+                <br />
+                <div class="btn-join">
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
