--- a/index.html
+++ b/index.html
@@ -149,6 +149,31 @@
             </div>
         </section>
     </main>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-left">
+                <p>44, Big Building Roosevelt Street</p>
+                <p>Beach Gardens Florida 33410</p>
+            </div>
+            <div class="footer-center">
+                <div class="social-icons">
+                    <a href="#"><img src="icons/Facebook.png" alt="Facebook" /></a>
+                    <a href="#"><img src="icons/Instagram.png" alt="Instagram" /></a>
+                    <a href="#"><img src="icons/Twitter.png" alt="X/Twitter" /></a>
+                    <a href="#"><img src="icons/Linkedin.png" alt="LinkedIn" /></a>
+                </div>
+            </div>
+            <div class="footer-right">
+                <p><i class="fa fa-phone"></i> +00 123 584 124</p>
+                <p><i class="fa fa-globe"></i> www.website.com</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>2017, All Rights Reserved.</p>
+            <a href="#">Unsubscribe</a>
+        </div>
+    </footer>
 </body>
 
 </html>
