--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet" />
 </head>
 
-<body>
+<body class="bg-colour">
     <!-- Header Part -->
     <header class="header">
         <div class="banner">
@@ -170,7 +170,8 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>2017, All Rights Reserved.</p>
+            <p>2015, All Rights Reserved.</p>
+            <p>Developed By Amdad Islam</p>
             <a href="#">Unsubscribe</a>
         </div>
     </footer>
